packages/scriptable/scriptable-0.1.2.tar.gz/scriptable-0.1.2/scriptable/antlr/HypothesisParser.py
# Generated from Hypothesis.g4 by ANTLR 4.9.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class HypothesisParser ( Parser ):

    grammarFileName = "Hypothesis.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'true'", "'false'", "'.'", "':'", "','", 
                     "';'", "'+'", "'-'", "'*'", "'/'", "'**'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "'&&'", "'||'", "'!'", 
                     "'=='", "'==='", "'!='", "'!=='", "'<'", "'<='", "'>'", 
                     "'>='", "'if'", "'else'", "'return'", "'function'", 
                     "'string'", "'number'", "'boolean'", "'=>'", "'while'", 
                     "'for'", "'in'", "'of'", "'const'", "'var'", "'let'", 
                     "'='", "'break'", "'continue'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "' '" ]

    symbolicNames = [ "<INVALID>", "TRUE", "FALSE", "DOT", "COLON", "COMMA", 
                      "SEMICOLON", "PLUS", "MINUS", "MUL", "DIV", "POWER", 
                      "ROUND_LEFT", "ROUND_RIGHT", "CURLY_LEFT", "CURLY_RIGHT", 
                      "BRACKET_LEFT", "BRACKET_RIGHT", "AND", "OR", "NOT", 
                      "EQ", "STRICT_EQ", "NEQ", "STRICT_NEQ", "LT", "LE", 
                      "GT", "GE", "IF", "ELSE", "RETURN", "FUNCTION", "STRING", 
                      "NUMBER", "BOOLEAN", "ARROW", "WHILE", "FOR", "IN", 
                      "OF", "CONST", "VAR", "LET", "EQUAL", "BREAK", "CONTINUE", 
                      "IDENTIFIER", "CHARS", "DIGITS", "WS", "LINE_COMMENT", 
                      "WHITESPACE" ]

    RULE_sAll = 0
    RULE_sOperand = 1
    RULE_sOperator = 2
    RULE_sExpression = 3
    RULE_sTerm = 4
    RULE_sValue = 5
    RULE_sPlus = 6
    RULE_sMinus = 7
    RULE_sMul = 8
    RULE_sDiv = 9
    RULE_sPower = 10
    RULE_sAnd = 11
    RULE_sOr = 12
    RULE_sNot = 13
    RULE_sEquals = 14
    RULE_sNotEquals = 15
    RULE_sLowerThan = 16
    RULE_sLowerEquals = 17
    RULE_sGreaterThan = 18
    RULE_sGreaterEquals = 19
    RULE_sArithmeticExpression = 20
    RULE_sArithmeticTerm = 21
    RULE_sBooleanOperand = 22
    RULE_sBooleanOperator = 23
    RULE_sBooleanExpression = 24
    RULE_sBooleanTerm = 25
    RULE_sNumberOperand = 26
    RULE_sNumberOperator = 27
    RULE_sNumberExpression = 28
    RULE_sNumberTerm = 29
    RULE_sStringOperand = 30
    RULE_sStringOperator = 31
    RULE_sStringExpression = 32
    RULE_sStringTerm = 33
    RULE_sConcatOperand = 34
    RULE_sConcatExpression = 35
    RULE_sConcatLeft = 36
    RULE_sConcatRight = 37
    RULE_sConcatBoth = 38
    RULE_sType = 39
    RULE_sProperty = 40
    RULE_sPropertyAware = 41
    RULE_sPropertyAccess = 42
    RULE_sString = 43
    RULE_sNumber = 44
    RULE_sBoolean = 45
    RULE_sArray = 46
    RULE_sMap = 47

    ruleNames =  [ "sAll", "sOperand", "sOperator", "sExpression", "sTerm", 
                   "sValue", "sPlus", "sMinus", "sMul", "sDiv", "sPower", 
                   "sAnd", "sOr", "sNot", "sEquals", "sNotEquals", "sLowerThan", 
                   "sLowerEquals", "sGreaterThan", "sGreaterEquals", "sArithmeticExpression", 
                   "sArithmeticTerm", "sBooleanOperand", "sBooleanOperator", 
                   "sBooleanExpression", "sBooleanTerm", "sNumberOperand", 
                   "sNumberOperator", "sNumberExpression", "sNumberTerm", 
                   "sStringOperand", "sStringOperator", "sStringExpression", 
                   "sStringTerm", "sConcatOperand", "sConcatExpression", 
                   "sConcatLeft", "sConcatRight", "sConcatBoth", "sType", 
                   "sProperty", "sPropertyAware", "sPropertyAccess", "sString", 
                   "sNumber", "sBoolean", "sArray", "sMap" ]

    EOF = Token.EOF
    TRUE=1
    FALSE=2
    DOT=3
    COLON=4
    COMMA=5
    SEMICOLON=6
    PLUS=7
    MINUS=8
    MUL=9
    DIV=10
    POWER=11
    ROUND_LEFT=12
    ROUND_RIGHT=13
    CURLY_LEFT=14
    CURLY_RIGHT=15
    BRACKET_LEFT=16
    BRACKET_RIGHT=17
    AND=18
    OR=19
    NOT=20
    EQ=21
    STRICT_EQ=22
    NEQ=23
    STRICT_NEQ=24
    LT=25
    LE=26
    GT=27
    GE=28
    IF=29
    ELSE=30
    RETURN=31
    FUNCTION=32
    STRING=33
    NUMBER=34
    BOOLEAN=35
    ARROW=36
    WHILE=37
    FOR=38
    IN=39
    OF=40
    CONST=41
    VAR=42
    LET=43
    EQUAL=44
    BREAK=45
    CONTINUE=46
    IDENTIFIER=47
    CHARS=48
    DIGITS=49
    WS=50
    LINE_COMMENT=51
    WHITESPACE=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SAllContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sExpression(self):
            return self.getTypedRuleContext(HypothesisParser.SExpressionContext,0)


        def EOF(self):
            return self.getToken(HypothesisParser.EOF, 0)

        def getRuleIndex(self):
            return HypothesisParser.RULE_sAll

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSAll" ):
                listener.enterSAll(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSAll" ):
                listener.exitSAll(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSAll" ):
                return visitor.visitSAll(self)
            else:
                return visitor.visitChildren(self)




    def sAll(self):

        localctx = HypothesisParser.SAllContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sAll)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.sExpression()
            self.state = 97
            self.match(HypothesisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SOperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sNumber(self):
            return self.getTypedRuleContext(HypothesisParser.SNumberContext,0)


        def sProperty(self):
            return self.getTypedRuleContext(HypothesisParser.SPropertyContext,0)


        def getRuleIndex(self):
            return HypothesisParser.RULE_sOperand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSOperand" ):
                listener.enterSOperand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSOperand" ):
                listener.exitSOperand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSOperand" ):
                return visitor.visitSOperand(self)
            else:
                return visitor.visitChildren(self)




    def sOperand(self):

        localctx = HypothesisParser.SOperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sOperand)
        try:
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HypothesisParser.DIGITS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.sNumber()
                pass
            elif token in [HypothesisParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.sProperty()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sPlus(self):
            return self.getTypedRuleContext(HypothesisParser.SPlusContext,0)


        def sMinus(self):
            return self.getTypedRuleContext(HypothesisParser.SMinusContext,0)


        def sMul(self):
            return self.getTypedRuleContext(HypothesisParser.SMulContext,0)


        def sDiv(self):
            return self.getTypedRuleContext(HypothesisParser.SDivContext,0)


        def sPower(self):
            return self.getTypedRuleContext(HypothesisParser.SPowerContext,0)


        def getRuleIndex(self):
            return HypothesisParser.RULE_sOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSOperator" ):
                listener.enterSOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSOperator" ):
                listener.exitSOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSOperator" ):
                return visitor.visitSOperator(self)
            else:
                return visitor.visitChildren(self)




    def sOperator(self):

        localctx = HypothesisParser.SOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sOperator)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HypothesisParser.PLUS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.sPlus()
                pass
            elif token in [HypothesisParser.MINUS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.sMinus()
                pass
            elif token in [HypothesisParser.MUL]:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.sMul()
                pass
            elif token in [HypothesisParser.DIV]:
                self.enterOuterAlt(localctx, 4)
                self.state = 106
                self.sDiv()
                pass
            elif token in [HypothesisParser.POWER]:
                self.enterOuterAlt(localctx, 5)
                self.state = 107
                self.sPower()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sConcatExpression(self):
            return self.getTypedRuleContext(HypothesisParser.SConcatExpressionContext,0)


        def sArithmeticExpression(self):
            return self.getTypedRuleContext(HypothesisParser.SArithmeticExpressionContext,0)


        def sBooleanExpression(self):
            return self.getTypedRuleContext(HypothesisParser.SBooleanExpressionContext,0)


        def sNumberExpression(self):
            return self.getTypedRuleContext(HypothesisParser.SNumberExpressionContext,0)


        def sStringExpression(self):
            return self.getTypedRuleContext(HypothesisParser.SStringExpressionContext,0)


        def getRuleIndex(self):
            return HypothesisParser.RULE_sExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSExpression" ):
                listener.enterSExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSExpression" ):
                listener.exitSExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSExpression" ):
                return visitor.visitSExpression(self)
            else:
                return visitor.visitChildren(self)




    def sExpression(self):

        localctx = HypothesisParser.SExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sExpression)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.sConcatExpression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.sArithmeticExpression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.sBooleanExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.sNumberExpression()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 114
                self.sStringExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class STermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sArithmeticTerm(self):
            return self.getTypedRuleContext(HypothesisParser.SArithmeticTermContext,0)


        def sBooleanTerm(self):
            return self.getTypedRuleContext(HypothesisParser.SBooleanTermContext,0)


        def getRuleIndex(self):
            return HypothesisParser.RULE_sTerm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSTerm" ):
                listener.enterSTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSTerm" ):
                listener.exitSTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSTerm" ):
                return visitor.visitSTerm(self)
            else:
                return visitor.visitChildren(self)




    def sTerm(self):

        localctx = HypothesisParser.STermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sTerm)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.sArithmeticTerm()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.sBooleanTerm()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sNumber(self):
            return self.getTypedRuleContext(HypothesisParser.SNumberContext,0)


        def sBoolean(self):
            return self.getTypedRuleContext(HypothesisParser.SBooleanContext,0)


        def sString(self):
            return self.getTypedRuleContext(HypothesisParser.SStringContext,0)


        def sArray(self):
            return self.getTypedRuleContext(HypothesisParser.SArrayContext,0)


        def sMap(self):
            return self.getTypedRuleContext(HypothesisParser.SMapContext,0)


        def getRuleIndex(self):
            return HypothesisParser.RULE_sValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSValue" ):
                listener.enterSValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSValue" ):
                listener.exitSValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSValue" ):
                return visitor.visitSValue(self)
            else:
                return visitor.visitChildren(self)




    def sValue(self):

        localctx = HypothesisParser.SValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sValue)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HypothesisParser.DIGITS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.sNumber()
                pass
            elif token in [HypothesisParser.TRUE, HypothesisParser.FALSE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.sBoolean()
                pass
            elif token in [HypothesisParser.CHARS]:
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.sString()
                pass
            elif token in [HypothesisParser.BRACKET_LEFT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                self.sArray()
                pass
            elif token in [HypothesisParser.CURLY_LEFT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 125
                self.sMap()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SPlusContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(HypothesisParser.PLUS, 0)

        def getRuleIndex(self):
            return HypothesisParser.RULE_sPlus

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSPlus" ):
                listener.enterSPlus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSPlus" ):
                listener.exitSPlus(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSPlus" ):
                return visitor.visitSPlus(self)
            else:
                return visitor.visitChildren(self)




    def sPlus(self):

        localctx = HypothesisParser.SPlusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sPlus)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(HypothesisParser.PLUS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SMinusContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINUS(self):
            return self.getToken(HypothesisParser.MINUS, 0)

        def getRuleIndex(self):
            return HypothesisParser.RULE_sMinus

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSMinus" ):
                listener.enterSMinus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSMinus" ):
                listener.exitSMinus(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSMinus" ):
                return visitor.visitSMinus(self)
            else:
                return visitor.visitChildren(self)




    def sMinus(self):

        localctx = HypothesisParser.SMinusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_sMinus)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(HypothesisParser.MINUS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SMulContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUL(self):
            return self.getToken(HypothesisParser.MUL, 0)

        def getRuleIndex(self):
            return HypothesisParser.RULE_sMul

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSMul" ):
                listener.enterSMul(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSMul" ):
                listener.exitSMul(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSMul" ):
                return visitor.visitSMul(self)
            else:
                return visitor.visitChildren(self)




    def sMul(self):

        localctx = HypothesisParser.SMulContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_sMul)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(HypothesisParser.MUL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SDivContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIV(self):
            return self.getToken(HypothesisParser.DIV, 0)

        def getRuleIndex(self):
            return HypothesisParser.RULE_sDiv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSDiv" ):
                listener.enterSDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSDiv" ):
                listener.exitSDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSDiv" ):
                return visitor.visitSDiv(self)
            else:
                return visitor.visitChildren(self)




    def sDiv(self):

        localctx = HypothesisParser.SDivContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_sDiv)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(HypothesisParser.DIV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SPowerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POWER(self):
            return self.getToken(HypothesisParser.POWER, 0)

        def getRuleIndex(self):
            return HypothesisParser.RULE_sPower

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSPower" ):
                listener.enterSPower(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSPower" ):
                listener.exitSPower(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSPower" ):
                return visitor.visitSPower(self)
            else:
                return visitor.visitChildren(self)




    def sPower(self):

        localctx = HypothesisParser.SPowerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_sPower)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(HypothesisParser.POWER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SAndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND(self):
            return self.getToken(HypothesisParser.AND, 0)

        def getRuleIndex(self):
            return HypothesisParser.RULE_sAnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSAnd" ):
                listener.enterSAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSAnd" ):
                listener.exitSAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSAnd" ):
                return visitor.visitSAnd(self)
            else:
                return visitor.visitChildren(self)




    def sAnd(self):

        localctx = HypothesisParser.SAndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_sAnd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(HypothesisParser.AND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SOrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OR(self):
            return self.getToken(HypothesisParser.OR, 0)

        def getRuleIndex(self):
            return HypothesisParser.RULE_sOr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSOr" ):
                listener.enterSOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSOr" ):
                listener.exitSOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSOr" ):
                return visitor.visitSOr(self)
            else:
                return visitor.visitChildren(self)




    def sOr(self):

        localctx = HypothesisParser.SOrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_sOr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(HypothesisParser.OR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SNotContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(HypothesisParser.NOT, 0)

        def getRuleIndex(self):
            return HypothesisParser.RULE_sNot

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSNot" ):
                listener.enterSNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSNot" ):
                listener.exitSNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSNot" ):
                return visitor.visitSNot(self)
            else:
                return visitor.visitChildren(self)




    def sNot(self):

        localctx = HypothesisParser.SNotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_sNot)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(HypothesisParser.NOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SEqualsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(HypothesisParser.EQ, 0)

        def STRICT_EQ(self):
            return self.getToken(HypothesisParser.STRICT_EQ, 0)

        def getRuleIndex(self):
            return HypothesisParser.RULE_sEquals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSEquals" ):
                listener.enterSEquals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSEquals" ):
                listener.exitSEquals(self)

        def accept(self, visitor:ParseTreeVisitor):
